[gd_scene load_steps=9 format=2]

[ext_resource path="res://blokes.meshlib" type="MeshLibrary" id=1]
[ext_resource path="res://jugador.tscn" type="PackedScene" id=2]
[ext_resource path="res://edificios.gd" type="Script" id=3]
[ext_resource path="res://terreno.gd" type="Script" id=4]
[ext_resource path="res://construciones/repetidor.tscn" type="PackedScene" id=5]
[ext_resource path="res://construciones/Recolector_apariencia.tscn" type="PackedScene" id=6]
[ext_resource path="res://construciones/Metralla.tscn" type="PackedScene" id=7]
[ext_resource path="res://construciones/Nave_Principal.tscn" type="PackedScene" id=8]

[node name="Spatial" type="Spatial"]

[node name="jugador" parent="." instance=ExtResource( 2 )]
transform = Transform( -0.739185, -0.0743507, -0.669387, 0, 0.993888, -0.110394, 0.673503, -0.0816015, -0.734667, 0, 10, 0 )

[node name="terreno" type="Spatial" parent="." groups=[
"terreno",
]]
script = ExtResource( 4 )

[node name="Tierra_0" type="GridMap" parent="terreno"]
collision_mask = 2147483649
data = {
"cells": PoolIntArray(  )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="seleccion" type="GridMap" parent="terreno/Tierra_0"]
mesh_library = ExtResource( 1 )
collision_layer = 0
collision_mask = 0
data = {
"cells": PoolIntArray(  )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="camara" type="GridMap" parent="terreno/Tierra_0" groups=[
"terreno_seleccionable",
]]
mesh_library = ExtResource( 1 )
data = {
"cells": PoolIntArray( 655379, 2, 4 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 10, 0 )
}

[node name="sismica" type="GridMap" parent="terreno/Tierra_0"]
visible = false
mesh_library = ExtResource( 1 )
collision_layer = 0
collision_mask = 0
data = {
"cells": PoolIntArray(  )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="radar" type="GridMap" parent="terreno/Tierra_0" groups=[
"terreno_seleccionable",
]]
mesh_library = ExtResource( 1 )
data = {
"cells": PoolIntArray(  )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="Tierra_1" type="GridMap" parent="terreno"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1 )
data = {
"cells": PoolIntArray(  )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="seleccion" type="GridMap" parent="terreno/Tierra_1"]
mesh_library = ExtResource( 1 )
collision_layer = 0
collision_mask = 0
data = {
"cells": PoolIntArray(  )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="camara" type="GridMap" parent="terreno/Tierra_1" groups=[
"terreno_seleccionable",
]]
mesh_library = ExtResource( 1 )
data = {
"cells": PoolIntArray( 524304, 8, 0 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 1, 0 )
}

[node name="sismica" type="GridMap" parent="terreno/Tierra_1"]
visible = false
mesh_library = ExtResource( 1 )
collision_layer = 0
collision_mask = 0
data = {
"cells": PoolIntArray(  )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="radar" type="GridMap" parent="terreno/Tierra_1" groups=[
"terreno_seleccionable",
]]
mesh_library = ExtResource( 1 )
data = {
"cells": PoolIntArray(  )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -1, 2.30405e-07, -2.30405e-07, 0, 0.707107, 0.707107, 3.25841e-07, 0.707107, -0.707107, 0, 10, 0 )
layers = 15
shadow_enabled = true

[node name="edificios" type="Spatial" parent="."]
script = ExtResource( 3 )
modelo_colector = ExtResource( 6 )
modelo_repetidor = ExtResource( 5 )
modelo_metralla = ExtResource( 7 )

[node name="nave_principal" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 20, 20 )

[node name="Repetidor" parent="nave_principal/puente_de_mando" index="0"]
inicial = true

[node name="repetidor" parent="nave_principal/puente_de_mando/Repetidor" index="0"]
visible = false

[node name="seleccion" parent="nave_principal/puente_de_mando/Repetidor" index="1"]
transform = Transform( 1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, 0, 1, 0 )

[node name="Metralla" parent="nave_principal/CSGTorus/metrallas" index="0"]
inicial = true

[node name="Metralla2" parent="nave_principal/CSGTorus/metrallas" index="1"]
inicial = true

[node name="Metralla3" parent="nave_principal/CSGTorus/metrallas" index="2"]
inicial = true

[node name="Metralla4" parent="nave_principal/CSGTorus/metrallas" index="3"]
inicial = true

[node name="Colector" parent="nave_principal/CSGTorus/recolectores" index="0"]
inicial = true

[node name="Colector2" parent="nave_principal/CSGTorus/recolectores" index="1"]
inicial = true

[node name="Colector3" parent="nave_principal/CSGTorus/recolectores" index="2"]
inicial = true

[node name="Colector4" parent="nave_principal/CSGTorus/recolectores" index="3"]
inicial = true
[connection signal="camara" from="jugador" to="terreno" method="_on_jugador_camara"]
[connection signal="ejecutar" from="jugador" to="terreno" method="_on_jugador_ejecutar"]
[connection signal="ver" from="jugador" to="terreno" method="_on_jugador_ver"]
[connection signal="construir" from="terreno" to="edificios" method="_on_terreno_construir"]
[connection signal="tamanio" from="terreno" to="jugador" method="_on_terreno_tamanio"]
[connection signal="edificio_nuevo" from="edificios" to="jugador" method="_on_edificios_edificio_nuevo"]
[connection signal="edificio_inicial" from="nave_principal/puente_de_mando/Repetidor" to="jugador" method="_on_Repetidor_edificio_inicial"]
[connection signal="edificio_inicial" from="nave_principal/CSGTorus/metrallas/Metralla" to="jugador" method="_on_Metralla_edificio_inicial"]
[connection signal="edificio_inicial" from="nave_principal/CSGTorus/metrallas/Metralla2" to="jugador" method="_on_Metralla2_edificio_inicial"]
[connection signal="edificio_inicial" from="nave_principal/CSGTorus/metrallas/Metralla3" to="jugador" method="_on_Metralla3_edificio_inicial"]
[connection signal="edificio_inicial" from="nave_principal/CSGTorus/metrallas/Metralla4" to="jugador" method="_on_Metralla4_edificio_inicial"]
[connection signal="edificio_inicial" from="nave_principal/CSGTorus/recolectores/Colector" to="jugador" method="_on_Colector_edificio_inicial"]
[connection signal="edificio_inicial" from="nave_principal/CSGTorus/recolectores/Colector2" to="jugador" method="_on_Colector2_edificio_inicial"]
[connection signal="edificio_inicial" from="nave_principal/CSGTorus/recolectores/Colector3" to="jugador" method="_on_Colector3_edificio_inicial"]
[connection signal="edificio_inicial" from="nave_principal/CSGTorus/recolectores/Colector4" to="jugador" method="_on_Colector4_edificio_inicial"]

[editable path="nave_principal"]

[editable path="nave_principal/puente_de_mando/Repetidor"]

[editable path="nave_principal/puente_de_mando/Repetidor/seleccion"]
